--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css" />
+    <script src="./assets/js/main.js"></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1>Idiota</h1>
+    </header>
     <main></main>
     <footer></footer>
   </body>
