more populated files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
   </head>
   <body>
     <header>
-      <h1>Idiota</h1>
+      <h1>Bones SergioSN Portfolio</h1>
+      <p>Welcome to my minimalist portfolio page.</p>
     </header>
-    <main></main>
+    <main>
+      <div class="presentation">
+        <h2>My Path and Skills</h2>
+        <p>
+          I am a Spanish Developer based in London, United Kingdom. I am
+          currently doing the Full Stack Engineer career path at Codecademy and
+          also Computer Science at University.
+        </p>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
