added image and more content

--- a/index.html
+++ b/index.html
@@ -17,11 +17,40 @@
         <h2>My Path and Skills</h2>
         <p>
           I am a Spanish Developer based in London, United Kingdom. I am
-          currently doing the Full Stack Engineer career path at Codecademy and
-          also Computer Science at University.
+          currently looking for work.
         </p>
+        <p>
+          I am currently doing the Full Stack Engineer career path at Codecademy
+          and also Computer Science at University. On my spare time I work on my
+          own UEFN creative maps for Fortnite.
+        </p>
+        <section>
+          <h3>Codecademy - Full Stack Engineer</h3>
+          <ul>
+            <li>HTML & CSS</li>
+            <li>Responsive and Accesible websites</li>
+            <li>Git & Github</li>
+            <li>Javascript</li>
+          </ul>
+          <h3>Computer Science</h3>
+          <ul>
+            <li>C++</li>
+            <li>Java - OOP and DataScrutures</li>
+          </ul>
+          <h3>Game Development</h3>
+          <ul>
+            <li>UEFN - Unreal Engine for Fortnite</li>
+            <li>Verse</li>
+          </ul>
+        </section>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <h2>Contact</h2>
+      <p>
+        You can contact me at
+        <strong><a href="mailto:“synssn@gmail.com”">SergioSN</a></strong>
+      </p>
+    </footer>
   </body>
 </html>
