--- a/index.html
+++ b/index.html
@@ -8,49 +8,62 @@
     <script src="./assets/js/main.js"></script>
   </head>
   <body>
-    <header>
-      <h1>Bones SergioSN Portfolio</h1>
-      <p>Welcome to my minimalist portfolio page.</p>
-    </header>
-    <main>
-      <div class="presentation">
-        <h2>My Path and Skills</h2>
-        <p>
-          I am a Spanish Developer based in London, United Kingdom. I am
-          currently looking for work.
-        </p>
-        <p>
-          I am currently doing the Full Stack Engineer career path at Codecademy
-          and also Computer Science at University. On my spare time I work on my
-          own UEFN creative maps for Fortnite.
-        </p>
-        <section>
-          <h3>Codecademy - Full Stack Engineer</h3>
-          <ul>
-            <li>HTML & CSS</li>
-            <li>Responsive and Accesible websites</li>
-            <li>Git & Github</li>
-            <li>Javascript</li>
-          </ul>
-          <h3>Computer Science</h3>
-          <ul>
-            <li>C++</li>
-            <li>Java - OOP and DataScrutures</li>
-          </ul>
-          <h3>Game Development</h3>
-          <ul>
-            <li>UEFN - Unreal Engine for Fortnite</li>
-            <li>Verse</li>
-          </ul>
-        </section>
+    <div class="demo-wrap">
+      <img
+        class="demo-bg"
+        src="./assets/images/anchor-lee-kO1G3neRA2o-unsplash.jpg"
+        alt="page background"
+      >
+      <div class="demo-content">
+        <header>
+          <h1>Bones SergioSN Portfolio</h1>
+          <h3>Welcome to my minimalist portfolio page.</h3>
+        </header>
+        <main>
+          <div class="presentation">
+            <h2>My Path and Skills</h2>
+            <p>
+              I am a Spanish Developer based in London, United Kingdom. I am
+              currently looking for work.
+            </p>
+            <p>
+              I am currently doing the Full Stack Engineer career path at Codecademy
+              and also Computer Science at University. On my spare time I work on my
+              own UEFN creative maps for Fortnite.
+            </p>
+            <section>
+              <h3>Codecademy - Full Stack Engineer</h3>
+              <ul>
+                <li>HTML & CSS</li>
+                <li>Responsive and Accesible websites</li>
+                <li>Git & Github</li>
+                <li>Javascript</li>
+              </ul>
+              <h3>Computer Science</h3>
+              <ul>
+                <li>C++</li>
+                <li>Java - OOP and DataScrutures</li>
+              </ul>
+              <h3>Game Development</h3>
+              <ul>
+                <li>UEFN - Unreal Engine for Fortnite</li>
+                <li>Verse</li>
+              </ul>
+            </section>
+          </div>
+        </main>
+        <footer>
+          <div class='time'>
+            <h2>Current date and time:</h2>
+            <span id="datetime"></span>
+          </div>
+          <h2>Contact:</h2>
+          <p>
+            You can contact me at
+            <strong><a href="mailto:“synssn@gmail.com”">SergioSN</a></strong>
+          </p>
+        </footer>
       </div>
-    </main>
-    <footer>
-      <h2>Contact</h2>
-      <p>
-        You can contact me at
-        <strong><a href="mailto:“synssn@gmail.com”">SergioSN</a></strong>
-      </p>
-    </footer>
+    
   </body>
 </html>
