added some js libraries to portfolio

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li>Responsive and Accesible websites</li>
                 <li>Git & Github</li>
                 <li>Javascript</li>
+                <li>Node.js, Mocha.js</li>
               </ul>
               <h3>Computer Science</h3>
               <ul>
