--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
               </ul>
               <h3>Game Development</h3>
               <ul>
-                <li>UEFN - Unreal Engine for Fortnite</li>
+                <li>Foundations UEFN - Unreal Engine for Fortnite</li>
                 <li>Verse</li>
+                <li>Foundations Unity</li>
+                <li>C#</li>
               </ul>
             </section>
           </div>
